--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <title>kiwi4814's xiaopozhan</title><meta name=Description content><meta property="og:title" content="kiwi4814's xiaopozhan">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://example.org/">
+<meta property="og:url" content="http://kiwi4814.com/">
 <meta name=twitter:card content="summary">
 <meta name=twitter:title content="kiwi4814's xiaopozhan">
 <meta name=twitter:description content>
 <meta name=application-name content="kiwi4814's xiaopozhan">
 <meta name=apple-mobile-web-app-title content="kiwi4814's xiaopozhan"><link rel="shortcut icon" type=image/x-icon href=/favicon.ico>
 <link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=manifest href=/site.webmanifest><link rel=canonical href=http://example.org/><link rel=alternate href=/index.xml type=application/rss+xml title="kiwi4814's xiaopozhan">
-<link rel=feed href=/index.xml type=application/rss+xml title="kiwi4814's xiaopozhan"><link rel=stylesheet href=/lib/normalize/normalize.min.css><link rel=stylesheet href=/css/style.min.css><link rel=stylesheet href=/lib/fontawesome-free/all.min.css><link rel=stylesheet href=/lib/animate/animate.min.css><script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"http:\/\/example.org\/","inLanguage":"zh-CN","name":"kiwi4814's xiaopozhan"}</script></head>
+<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=manifest href=/site.webmanifest><link rel=canonical href=http://kiwi4814.com/><link rel=alternate href=/index.xml type=application/rss+xml title="kiwi4814's xiaopozhan">
+<link rel=feed href=/index.xml type=application/rss+xml title="kiwi4814's xiaopozhan"><link rel=stylesheet href=/lib/normalize/normalize.min.css><link rel=stylesheet href=/css/style.min.css><link rel=stylesheet href=/lib/fontawesome-free/all.min.css><link rel=stylesheet href=/lib/animate/animate.min.css><script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"http:\/\/kiwi4814.com\/","inLanguage":"zh-CN","name":"kiwi4814's xiaopozhan"}</script></head>
 <body header-desktop header-mobile><script type=text/javascript>(window.localStorage&&localStorage.getItem('theme')?localStorage.getItem('theme')==='dark':''==='auto'?window.matchMedia('(prefers-color-scheme: dark)').matches:''==='dark')&&document.body.setAttribute('theme','dark')</script>
 <div id=mask></div><div class=wrapper><header class=desktop id=header-desktop>
 <div class=header-wrapper>
