--- a/test/index.html
+++ b/test/index.html
@@ -4,18 +4,18 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta name=robots content="noodp">
 <meta http-equiv=x-ua-compatible content="IE=edge, chrome=1">
-<title>所有文章 - kiwi4814's xiaopozhan</title><meta name=Description content><meta property="og:title" content="Posts">
+<title>所有test - kiwi4814's xiaopozhan</title><meta name=Description content><meta property="og:title" content="Tests">
 <meta property="og:description" content>
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://kiwi4814.com/posts/">
+<meta property="og:url" content="http://kiwi4814.com/test/">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Posts">
+<meta name=twitter:title content="Tests">
 <meta name=twitter:description content>
 <meta name=application-name content="kiwi4814's xiaopozhan">
 <meta name=apple-mobile-web-app-title content="kiwi4814's xiaopozhan"><link rel="shortcut icon" type=image/x-icon href=/favicon.ico>
 <link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=manifest href=/site.webmanifest><link rel=canonical href=http://kiwi4814.com/posts/><link rel=alternate href=/posts/index.xml type=application/rss+xml title="kiwi4814's xiaopozhan">
-<link rel=feed href=/posts/index.xml type=application/rss+xml title="kiwi4814's xiaopozhan"><link rel=stylesheet href=/lib/normalize/normalize.min.css><link rel=stylesheet href=/css/style.min.css><link rel=stylesheet href=/lib/fontawesome-free/all.min.css><link rel=stylesheet href=/lib/animate/animate.min.css></head>
+<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=manifest href=/site.webmanifest><link rel=canonical href=http://kiwi4814.com/test/><link rel=alternate href=/test/index.xml type=application/rss+xml title="kiwi4814's xiaopozhan">
+<link rel=feed href=/test/index.xml type=application/rss+xml title="kiwi4814's xiaopozhan"><link rel=stylesheet href=/lib/normalize/normalize.min.css><link rel=stylesheet href=/css/style.min.css><link rel=stylesheet href=/lib/fontawesome-free/all.min.css><link rel=stylesheet href=/lib/animate/animate.min.css></head>
 <body header-desktop header-mobile><script type=text/javascript>(window.localStorage&&localStorage.getItem('theme')?localStorage.getItem('theme')==='dark':''==='auto'?window.matchMedia('(prefers-color-scheme: dark)').matches:''==='dark')&&document.body.setAttribute('theme','dark')</script>
 <div id=mask></div><div class=wrapper><header class=desktop id=header-desktop>
 <div class=header-wrapper>
@@ -23,7 +23,7 @@
 <a href=/ title="kiwi4814's xiaopozhan">kiwi4814's xiaopozhan</a>
 </div>
 <div class=menu>
-<div class=menu-inner><a class="menu-item active" href=/posts/> 文章 </a><a class=menu-item href=/tags/> 标签 </a><a class=menu-item href=/categories/> 分类 </a><span class="menu-item delimiter"></span><a href=javascript:void(0); class="menu-item theme-switch" title=切换主题>
+<div class=menu-inner><a class=menu-item href=/posts/> 文章 </a><a class=menu-item href=/tags/> 标签 </a><a class=menu-item href=/categories/> 分类 </a><span class="menu-item delimiter"></span><a href=javascript:void(0); class="menu-item theme-switch" title=切换主题>
 <i class="fas fa-adjust fa-fw"></i>
 </a>
 </div>
@@ -51,15 +51,9 @@
 <div id=search-dropdown-mobile></div>
 </div>
 <main class=main>
-<div class=container><div class="page archive"><h2 class="single-title animated pulse faster">所有文章</h2><h3 class=group-title>2021</h3><article class=archive-item>
-<a href=/posts/third_post/ class=archive-item-link>Third_post</a>
+<div class=container><div class="page archive"><h2 class="single-title animated pulse faster">所有test</h2><h3 class=group-title>2021</h3><article class=archive-item>
+<a href=/test/1_post/ class=archive-item-link>1_post</a>
 <span class=archive-item-date>12-29</span>
-</article><article class=archive-item>
-<a href=/posts/second_post/ class=archive-item-link>Second_post</a>
-<span class=archive-item-date>12-29</span>
-</article><article class=archive-item>
-<a href=/posts/first_post/ class=archive-item-link>First_post</a>
-<span class=archive-item-date>12-27</span>
 </article></div></div>
 </main><footer class=footer>
 <div class=footer-container><div class=footer-line>由 <a href=https://gohugo.io/ target=_blank rel="noopener noreffer" title="Hugo 0.91.2">Hugo</a> 强力驱动 | 主题 - <a href=https://github.com/dillonzq/LoveIt target=_blank rel="noopener noreffer" title="LoveIt 0.2.10"><i class="far fa-kiss-wink-heart fa-fw"></i> LoveIt</a>
