--- a/test/index.html
+++ b/test/index.html
@@ -52,6 +52,9 @@
 </div>
 <main class=main>
 <div class=container><div class="page archive"><h2 class="single-title animated pulse faster">所有test</h2><h3 class=group-title>2021</h3><article class=archive-item>
+<a href=/test/2_post/ class=archive-item-link>2_post</a>
+<span class=archive-item-date>12-29</span>
+</article><article class=archive-item>
 <a href=/test/1_post/ class=archive-item-link>1_post</a>
 <span class=archive-item-date>12-29</span>
 </article></div></div>
